# PartyThreads

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: test.yml
examples/: PartyThreadsExample.cpp
include/: PartyThreads.h
tests/: PartyThreadsLibraryTest.cpp  PartyThreadsTest.cpp
tests/AsLibrary/: PartyThreadsLibrary.cpp  PartyThreadsLibrary.h
